--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Foundation | Welcome</title>
+<title>Life of Ida B| Welcome</title>
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <div class="top-bar">
 <div class="top-bar-left">
 <ul class="menu">
-<li class="menu-text">My Blog</li>
+<li class="menu-text">Ida's Blog</li>
 <li><a href="#">One</a></li>
 <li><a href="#">Two</a></li>
 <li><a href="#">Three</a></li>
@@ -23,14 +23,14 @@
 <div class="callout large primary">
 <div class="row column text-center">
 <h1>Ida's Blog</h1>
-<h2 class="subheader">Such a Simple Blog Layout</h2>
+<h2 class="subheader">Hello it's me, Ida B</h2>
 </div>
 </div>
 
 <div class="row medium-8 large-7 columns">
 <div class="blog-post">
 <h3>Awesome blog post about Ida <small>3/6/2015</small></h3>
-<img class="thumbnail" src="https://placehold.it/850x350">
+  <img class="thumbnail" src="https://placehold.it/850x350">
 <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.</p>
 <div class="callout">
 <ul class="menu simple">
